@@ -139,8 +139,9 @@ namespace VDS.RDF.Writing.Formatting
         /// Formats a Literal Node as a String
         /// </summary>
         /// <param name="l">Literal Node</param>
+        /// <param name="segment">Triple Segment</param>
         /// <returns></returns>
-        protected override string FormatLiteralNode(LiteralNode l)
+        protected override string FormatLiteralNode(LiteralNode l, TripleSegment? segment)
         {
             StringBuilder output = new StringBuilder();
             String value, qname;
@@ -219,8 +220,9 @@ namespace VDS.RDF.Writing.Formatting
         /// Formats a Blank Node as a String
         /// </summary>
         /// <param name="b">Blank Node</param>
+        /// <param name="segment">Triple Segment</param>
         /// <returns></returns>
-        protected override string FormatBlankNode(BlankNode b)
+        protected override string FormatBlankNode(BlankNode b, TripleSegment? segment)
         {
             return "_:" + this._bnodeMapper.GetOutputID(b.InternalID);
         }
