@@ -320,7 +320,7 @@ namespace VDS.RDF.Writing
                     }
                     else
                     {
-                        return context.NodeFormatter.Format(n);
+                        return context.NodeFormatter.Format(n, segment);
                     }
                     break;
 
@@ -346,14 +346,10 @@ namespace VDS.RDF.Writing
 
                 case NodeType.Literal:
                     if (segment == TripleSegment.Predicate) throw new RdfOutputException(WriterErrorMessages.LiteralPredicatesUnserializable("Notation 3"));
-                    return context.NodeFormatter.Format(n);
+                    return context.NodeFormatter.Format(n, segment);
 
                 case NodeType.Uri:
-                    if (segment == TripleSegment.Predicate)
-                    {
-                        if (((UriNode)n).StringUri.Equals(RdfSpecsHelper.RdfType, StringComparison.Ordinal)) return "a";
-                    }
-                    return context.NodeFormatter.Format(n);
+                    return context.NodeFormatter.Format(n, segment);
 
                 default:
                     throw new RdfOutputException(WriterErrorMessages.UnknownNodeTypeUnserializable("Notation 3"));
