@@ -22,7 +22,8 @@ Added
 - Silverlight Compatability
  - Emulated HtmlTextWriter and HttpUtility for Silverlight compatability
  - Variety of compiler symbols defined to allow various library features to be disabled
- - SparqlXmlParser uses XmlTextReader when no XML DOM API available
+ - SparqlXmlParser and SparqlXmlWriter use XmlReader and XmlWriter respectively when no XML DOM API available
+ - TriXParser and TriXWriter use XmlReader and XmlWriter respectively when no XML DOM API available
 
 
 Changed
@@ -35,6 +36,11 @@ Changed
  - Potentially ambigious QNames and Plain Literals now no longer cause parsing errors in Turtle, N3, TriG and SPARQL Parsers
 - General Improvements
  - INamespaceMapper interface extracted and some visibility changes to NamespaceMapper methods
+- SPARQL Improvements
+ - Optimisations for ASK queries
+ - Optimisations for CONSTRUCT/DESCRIBE/SELECT where LIMIT/OFFSET is used
+- ASP.Net Improvements
+ - Better caching support for BaseGraphHandler - now sends ETag in responses and may response with 304 Not Modified as appropriate
 
 
 
